--- a/TMREACT/Day3/3_1.html
+++ b/TMREACT/Day3/3_1.html
@@ -9,6 +9,39 @@
 <body>
   <div id='app'></div>
 
+  <!--TEST API  -->
+  <script>
+    window.API = {
+      fetchAnimals() {
+        return new Promise((resolve,reject) => {
+          const animals = [
+            {
+              name: 'Dog',
+              active: true
+            },
+            {
+              name: 'Cat',
+              active: true
+            },
+            {
+              name: 'Ferret',
+              active: true
+            },
+            {
+              name: 'Coon',
+              active: true
+            },
+            {
+              name: 'Duck',
+              active: false
+            }
+          ]
+          setTimeout(() => resolve(animals),2000)
+        })
+      }
+    }
+  </script>
+
   <script type='text/babel'>
 
     function ActiveAnimals(props) {
@@ -48,34 +81,32 @@
       constructor(props) {
         super(props)
         this.state = {
-          animals: [
-            {
-              name: 'Dog',
-              active: true
-            },
-            {
-              name: 'Cat',
-              active: true
-            },
-            {
-              name: 'Ferret',
-              active: true
-            },
-            {
-              name: 'Coon',
-              active: true
-            },
-            {
-              name: 'Duck',
-              active: false
-            }
-          ],
+          animals: [],
           input: '',
         }
         this.handleRemoveAnimal = this.handleRemoveAnimal.bind(this)
         this.updateInput = this.updateInput.bind(this)
         this.handleAddAnimal = this.handleAddAnimal.bind(this)
         this.handleToggleAnimal = this.handleToggleAnimal.bind(this)
+
+        console.log('--constructor--')
+      }
+
+      componentDidMount(){
+        console.log('--componentDidMount--')
+        API.fetchAnimals()
+          .then((animals) => {
+            this.setState({
+              animals
+            })
+          })
+      }
+
+      componentDidUpdate(){
+        console.log('--componentDidUpdate--')
+      }
+      componentWillUnmount() {
+        console.log('--componentWillUnmount--')
       }
 
       handleAddAnimal() {
@@ -124,6 +155,7 @@
 
 
       render() {
+        console.log('--render--')
         return (
           <div>
             <input
