Create a method fetchRepos that is responsible for fetching a particular language and updates local state of the repos array. Use window.APi helper to create a promise that will return objects data

--- a/TMREACT/Day3/3_3.html
+++ b/TMREACT/Day3/3_3.html
@@ -84,12 +84,27 @@
           loading: true,
         }
         this.handleSelectLanguage = this.handleSelectLanguage.bind(this)
+        this.fetchRepos = this.fetchRepos.bind(this)
       }
 
       handleSelectLanguage(lang){
         this.setState({
           activeLanguage: lang
         })
+      }
+
+      fetchRepos(lang) {
+        this.setState({
+          loading: true
+
+        })
+        window.API.fetchPopularRepos(lang)
+          .then((data) => {
+            this.setState({
+              loading: false,
+              repos: data
+            })
+          })
       }
 
       render() {
