Using desctucturing on .map on RepoGrid component, wrote UI to display all repos

--- a/TMREACT/Day3/3_3.html
+++ b/TMREACT/Day3/3_3.html
@@ -66,10 +66,22 @@
       )
     }
 
+    function RepoGrid(props) {
+      return (
+        <ul style={{display: 'flex', flexWrap: 'wrap' }}>
 
-
-
-
+          {props.repos.map(({name,owner, stargazers_count, html_url}) => (
+            <li key={name} style={{margin: 30}}>
+              <ul>
+                <li><a href={html_url}>{name}</a></li>
+                <li>@{owner.login}</li>
+                <li>{stargazers_count}</li>
+              </ul>
+            </li>
+          ))}
+        </ul>
+      )
+    }
 
 
     class App extends React.Component {
@@ -121,18 +133,16 @@
             />
             <h1>
               Active Language:
+            </h1>
               {this.state.loading === true
               ? <Loading />
               : <div>
                   <h1 style={{textAlign: 'center'}}>
                     {this.state.activeLanguage}
                   </h1>
-                  <p>To test if data is coming from API</p>
-                  {JSON.stringify(this.state.repos)}
-                </div>}
-
-            </h1>
-
+                  <RepoGrid repos={this.state.repos}/>
+                </div>
+              }
           </div>
         )
       }
