--- a/BHReact/PartI/index.html
+++ b/BHReact/PartI/index.html
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Adopt Pet</title>
 </head>
 <body>
+  <div id="root"> not rendering </div>
+  <script src="https://unpkg.com/react@16.4.1/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@16.4.1/umd/react-dom.development.js"></script>
+  <script>
+    //your code goes here
+  </script>
 
 </body>
 </html>
