--- a/BHReact/PartI/src/index.html
+++ b/BHReact/PartI/src/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Adopt Pet</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <div id="root"> not rendering </div>
   <script src="https://unpkg.com/react@16.4.1/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@16.4.1/umd/react-dom.development.js"></script>
-  <script>
-    //your code goes here
-  </script>
+
+  <script src="./App.js"></script>
 
 </body>
 </html>
